--- a/app/src/main/res/layout/activity_infractores_main.xml
+++ b/app/src/main/res/layout/activity_infractores_main.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#EDF2F6"
-    tools:context=".Infractores_main">
+    tools:context=".Infractores_main"
+    android:orientation="vertical">
 
   <LinearLayout
       android:id="@+id/linearLayout2"
@@ -96,8 +97,9 @@
   <ScrollView
       android:id="@+id/scrollView5"
       android:layout_width="match_parent"
-      android:layout_height="575dp"
+      android:layout_height="642dp"
       android:layout_marginTop="4dp"
+      android:paddingBottom="10dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textView20">
@@ -111,44 +113,51 @@
   </ScrollView>
 
   <LinearLayout
-      android:id="@+id/infractores_main_infractores_btnAgregar"
-      android:layout_width="229dp"
-      android:layout_height="61dp"
-      android:layout_marginEnd="16dp"
-      android:layout_marginBottom="16dp"
-      android:background="@drawable/rounded_corners_all"
-      android:backgroundTint="#4399FF"
-      android:gravity="center"
-      android:orientation="horizontal"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/scrollView5"
-      app:layout_constraintVertical_bias="1.0">
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:gravity="right"
+      android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/imageView18"
-        android:layout_width="0dp"
-        android:layout_height="34dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_weight="1"
-        android:paddingLeft="7dp"
-        android:paddingTop="7dp"
-        android:paddingBottom="7dp"
-        android:src="@drawable/button_person_add" />
+    <LinearLayout
+        android:id="@+id/infractores_main_infractores_btnAgregar"
+        android:layout_width="229dp"
+        android:layout_height="61dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/rounded_corners_all"
+        android:backgroundTint="#4399FF"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView5"
+        app:layout_constraintVertical_bias="1.0">
 
-    <TextView
-        android:id="@+id/textView21"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_margin="10dp"
-        android:layout_weight="1"
-        android:fontFamily="@font/poppins_semibold"
-        android:gravity="center_vertical"
-        android:text="Agregar"
-        android:textColor="#FFFFFF"
-        android:textSize="16sp" />
+      <ImageView
+          android:id="@+id/imageView18"
+          android:layout_width="0dp"
+          android:layout_height="34dp"
+          android:layout_marginLeft="10dp"
+          android:layout_marginTop="10dp"
+          android:layout_marginBottom="10dp"
+          android:layout_weight="1"
+          android:paddingLeft="7dp"
+          android:paddingTop="7dp"
+          android:paddingBottom="7dp"
+          android:src="@drawable/button_person_add" />
+
+      <TextView
+          android:id="@+id/textView21"
+          android:layout_width="wrap_content"
+          android:layout_height="match_parent"
+          android:layout_margin="10dp"
+          android:layout_weight="1"
+          android:fontFamily="@font/poppins_semibold"
+          android:gravity="center_vertical"
+          android:text="Agregar"
+          android:textColor="#FFFFFF"
+          android:textSize="16sp" />
+    </LinearLayout>
   </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
