--- a/app/src/main/res/layout/activity_infractores_main.xml
+++ b/app/src/main/res/layout/activity_infractores_main.xml
@@ -97,8 +97,9 @@
   <ScrollView
       android:id="@+id/scrollView5"
       android:layout_width="match_parent"
-      android:layout_height="642dp"
+      android:layout_height="724dp"
       android:layout_marginTop="4dp"
+      android:layout_weight="1"
       android:paddingBottom="10dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
@@ -114,7 +115,9 @@
 
   <LinearLayout
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
+      android:layout_height="184dp"
+      android:layout_marginTop="20dp"
+      android:layout_weight="1"
       android:gravity="right"
       android:orientation="vertical">
 
