--- a/app/src/main/res/layout/activity_denuncias_main.xml
+++ b/app/src/main/res/layout/activity_denuncias_main.xml
@@ -8,7 +8,6 @@
     tools:context=".Denuncias_main">
 
     <LinearLayout
-        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -21,27 +20,25 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/infractores_main_btnQuit"
+                android:id="@+id/Denuncias_main_btnQuit"
                 android:layout_width="0dp"
                 android:layout_height="59dp"
                 android:layout_weight="1"
                 android:src="@drawable/buttton_back" />
 
             <TextView
-                android:id="@+id/textView3"
                 android:layout_width="242dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppins_semibold"
                 android:gravity="center_vertical"
-                android:text="Decomisos"
+                android:text="Denuncias"
                 android:textColor="#000000"
                 android:textSize="16sp" />
 
         </LinearLayout>
 
         <ImageView
-            android:id="@+id/imageView16"
             android:layout_width="match_parent"
             android:layout_height="4dp"
             android:src="@drawable/decorative_line" />
@@ -49,7 +46,6 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -57,14 +53,12 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
         <LinearLayout
-            android:id="@+id/linearLayout3"
             android:layout_width="350dp"
             android:layout_height="41dp"
             android:background="@drawable/rounded_corners_right"
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/editTextTextPersonName"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="20dp"
@@ -77,7 +71,6 @@
                 android:textSize="16sp" />
 
             <ImageView
-                android:id="@+id/imageView15"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -85,44 +78,58 @@
                 android:src="@drawable/button_search" />
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="42dp"
-                android:layout_height="42dp"
-                android:background="@drawable/rounded_corners_circular"
-                android:backgroundTint="#3D96FF"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/imageView14"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="10dp"
-                    app:srcCompat="@drawable/button_plus" />
-            </LinearLayout>
-        </LinearLayout>
     </LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
-        app:layout_constraintVertical_bias="0.324">
+        android:layout_height="0dp"
+        android:layout_marginTop="4dp"
+        android:layout_weight="1"
+        android:paddingBottom="10dp">
 
         <LinearLayout
+            android:id="@+id/Denuncias_main_denucias_cards"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:orientation="vertical" />
     </ScrollView>
+
+    <LinearLayout
+        android:id="@+id/Denuncias_main_denuncias_btnAgregar"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/rounded_corners_all"
+        android:backgroundTint="#4399FF"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="34dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="1"
+            android:paddingLeft="7dp"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:src="@drawable/button_person_add" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:fontFamily="@font/poppins_semibold"
+            android:gravity="center_vertical"
+            android:text="Agregar"
+            android:textColor="#FFFFFF"
+            android:textSize="16sp" />
+    </LinearLayout>
+
 </LinearLayout>
