--- a/app/src/main/res/layout/activity_registro_usuario_datos_policia.xml
+++ b/app/src/main/res/layout/activity_registro_usuario_datos_policia.xml
@@ -46,6 +46,7 @@
         android:gravity="center_vertical"
         android:hint="Numero de placa"
         android:inputType="number"
+        android:maxLength="5"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:textColor="#000000"
