--- a/app/src/main/res/layout/activity_detenidos_agregar.xml
+++ b/app/src/main/res/layout/activity_detenidos_agregar.xml
@@ -295,6 +295,7 @@
                     android:textSize="16sp" />
 
                 <LinearLayout
+                    android:id="@+id/Detenidos_agregar_LlAgregarInvolucradoContainer"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="10dp"
