--- a/app/src/main/res/layout/activity_registro_usuario_ingreso_credenciales.xml
+++ b/app/src/main/res/layout/activity_registro_usuario_ingreso_credenciales.xml
@@ -69,6 +69,7 @@
         android:gravity="center_vertical"
         android:hint="Contraseña"
         android:inputType="textPersonName"
+        android:maxLength="15"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:textColor="#000000"
@@ -92,6 +93,7 @@
         android:gravity="center_vertical"
         android:hint="Confirmar contraseña"
         android:inputType="textPersonName"
+        android:maxLength="15"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:textColor="#000000"
