--- a/app/src/main/res/layout/activity_decomisos_agregar.xml
+++ b/app/src/main/res/layout/activity_decomisos_agregar.xml
@@ -71,6 +71,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginVertical="10dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -84,8 +86,6 @@
                     android:id="@+id/Decomisos_agregar_btnTomarFoto"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginVertical="20dp"
-                    android:layout_marginLeft="20dp"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
                     android:background="@drawable/rounded_corners_all"
@@ -117,9 +117,7 @@
                     android:id="@+id/Decomisos_agregar_btnSubirFoto"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginVertical="20dp"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginRight="20dp"
                     android:layout_weight="1"
                     android:background="@drawable/rounded_corners_all"
                     android:backgroundTint="#3D96FF"
@@ -149,6 +147,40 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/Decomisos_agregar_btnQuitarFoto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="60dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/rounded_corners_all"
+                android:backgroundTint="#3D96FF"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageView20"
+                    android:layout_width="138dp"
+                    android:layout_height="34dp"
+                    android:layout_weight="1"
+                    android:paddingLeft="5dp"
+                    android:paddingTop="5dp"
+                    android:paddingRight="5dp"
+                    android:paddingBottom="5dp"
+                    android:rotation="45"
+                    app:srcCompat="@drawable/button_plus" />
+
+                <TextView
+                    android:id="@+id/textView29"
+                    android:layout_width="207dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:text="Quitar foto"
+                    android:textColor="#FFFFFF"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginHorizontal="20dp"
@@ -167,7 +199,7 @@
                     android:textSize="16sp" />
 
                 <Spinner
-                    android:id="@+id/spinner"
+                    android:id="@+id/Decomisos_agregar_spDecomiso"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginVertical="7dp"
@@ -242,7 +274,7 @@
                     android:orientation="vertical"></LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/Decomisos_agregar_btnSeleccionarInfractor"
+                    android:id="@+id/Decomisos_agregar_btnSeleccionarDetenido"
                     android:layout_width="match_parent"
                     android:layout_height="35dp"
                     android:background="@drawable/rounded_corners_all"
