--- a/app/src/main/res/layout/activity_detenidos_seleccion.xml
+++ b/app/src/main/res/layout/activity_detenidos_seleccion.xml
@@ -6,10 +6,10 @@
     android:layout_height="match_parent"
     android:background="#EDF2F6"
     android:orientation="vertical"
-    tools:context=".Infractores_seleccion">
+    tools:context=".Detenidos_seleccion">
+
 
     <LinearLayout
-        android:id="@+id/linearLayout7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -25,7 +25,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/Infractores_Seleccion_btnSalir"
+                android:id="@+id/Detenidos_Seleccion_btnSalir"
                 android:layout_width="0dp"
                 android:layout_height="59dp"
                 android:layout_weight="1"
@@ -37,7 +37,7 @@
                 android:layout_weight="1"
                 android:fontFamily="@font/poppins_semibold"
                 android:gravity="center_vertical"
-                android:text="Infractores"
+                android:text="Detenidos"
                 android:textColor="#000000"
                 android:textSize="16sp" />
 
@@ -51,12 +51,10 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout9"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="330dp"
@@ -65,12 +63,12 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/Infractores_Seleccion_txtBusqueda"
+                android:id="@+id/Detenidos_Seleccion_txtBusqueda"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginHorizontal="20dp"
                 android:layout_weight="1"
-                android:background="@color/white"
+                android:background="#ffffff"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
                 android:hint="Busqueda"
@@ -80,7 +78,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/Infractores_Seleccion_btnAgregar"
+            android:id="@+id/Detenidos_Seleccion_btnAgregar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
@@ -116,7 +114,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout9">
 
         <LinearLayout
-            android:id="@+id/Infractores_Seleccion_LlInfractores"
+            android:id="@+id/Detenidos_Seleccion_LlInfractores"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
@@ -124,7 +122,7 @@
     </ScrollView>
 
     <TextView
-        android:id="@+id/Infractores_Seleccion_btnGuardar"
+        android:id="@+id/Detenidos_Seleccion_btnGuardar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
@@ -139,4 +137,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+
 </LinearLayout>
