--- a/app/src/main/res/layout/activity_registro_usuario_ingreso_datos_referencia_personal.xml
+++ b/app/src/main/res/layout/activity_registro_usuario_ingreso_datos_referencia_personal.xml
@@ -91,7 +91,8 @@
                 android:ems="10"
                 android:fontFamily="@font/poppins_medium"
                 android:hint="DUI"
-                android:inputType="number"
+                android:inputType="phone"
+                android:maxLength="10"
                 android:paddingBottom="7dp"
                 android:textColorHint="#8F8F8F"
                 android:textSize="19sp" />
