--- a/app/src/main/res/layout/activity_registro_usuario_verificar_correo2.xml
+++ b/app/src/main/res/layout/activity_registro_usuario_verificar_correo2.xml
@@ -4,10 +4,59 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RecuperacionCredencialesMailVerificacion">
+    tools:context=".RegistroVerificarCorreoParte2">
+
+    <ImageView
+        android:id="@+id/imageView20"
+        android:layout_width="151dp"
+        android:layout_height="77dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.19"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.066"
+        app:srcCompat="@drawable/logo_name_right" />
+
+    <TextView
+        android:id="@+id/textView29"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins_extrabold"
+        android:text="Verificar correo"
+        android:textAlignment="center"
+        android:textColor="#403F71"
+        android:textSize="36sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.292"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.241" />
 
     <Button
-        android:id="@+id/RecuperacionCredencialesMailVerificacionBtnVerificar"
+        android:id="@+id/btnReenviarCodigo2"
+        android:layout_width="334dp"
+        android:layout_height="55dp"
+        android:background="@drawable/rounded_corners_all"
+        android:backgroundTint="#4399FF"
+        android:elevation="20dp"
+        android:fontFamily="@font/poppins_semibold"
+        android:padding="10dp"
+        android:text="reenviar codigo"
+        android:textAllCaps="false"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.528" />
+
+    <Button
+        android:id="@+id/btnVerificar2"
         android:layout_width="334dp"
         android:layout_height="55dp"
         android:background="@drawable/rounded_corners_all"
@@ -26,46 +75,18 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.948" />
 
-    <TextView
-        android:id="@+id/textView16"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/poppins_extrabold"
-        android:text="Verificar correo"
-        android:textAlignment="center"
-        android:textColor="#403F71"
-        android:textSize="36sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.292"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.241" />
-
-    <ImageView
-        android:id="@+id/imageView10"
-        android:layout_width="151dp"
-        android:layout_height="77dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.19"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.066"
-        app:srcCompat="@drawable/logo_name_right" />
-
     <EditText
-        android:id="@+id/RecuperacionCredencialesMailVerificacionTxtEmail"
-        android:layout_width="332dp"
+        android:id="@+id/txtCodigo"
+        android:layout_width="333dp"
         android:layout_height="51dp"
+        android:layout_gravity="center"
         android:background="@drawable/rounded_corners_all"
         android:elevation="20dp"
         android:ems="10"
         android:fontFamily="@font/poppins_semibold"
-        android:gravity="center_vertical"
-        android:hint="Correo electronico"
-        android:inputType="textPersonName"
+        android:hint="Codigo de verificación"
+        android:inputType="number"
+        android:maxLength="8"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:textColor="#000000"
@@ -73,9 +94,7 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.543"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.398" />
-
+        app:layout_constraintVertical_bias="0.411" />
 </androidx.constraintlayout.widget.ConstraintLayout>
