--- a/app/src/main/res/layout/activity_registro_usuario_ingreso_datos.xml
+++ b/app/src/main/res/layout/activity_registro_usuario_ingreso_datos.xml
@@ -91,11 +91,11 @@
                 android:ems="10"
                 android:fontFamily="@font/poppins_medium"
                 android:hint="DUI"
-                android:maxLength="9"
+                android:inputType="phone"
+                android:maxLength="10"
                 android:paddingBottom="7dp"
                 android:textColorHint="#8F8F8F"
-                android:textSize="19sp"
-                android:inputType="number"/>
+                android:textSize="19sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
