hilos en acercamiento e infractores

--- a/app/src/main/res/layout/detenidos_card_detenido_select.xml
+++ b/app/src/main/res/layout/detenidos_card_detenido_select.xml
@@ -68,7 +68,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:background="@drawable/rounded_corners_circular"
-                    android:backgroundTint="#5FE35B"
+                    android:backgroundTint="#FFFFFF"
                     android:orientation="vertical" />
 
             </LinearLayout>
