--- a/app/src/main/res/layout/activity_decomisos_agregar.xml
+++ b/app/src/main/res/layout/activity_decomisos_agregar.xml
@@ -86,7 +86,7 @@
                     android:id="@+id/Decomisos_agregar_btnTomarFoto"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginRight="5dp"
                     android:layout_weight="1"
                     android:background="@drawable/rounded_corners_all"
                     android:backgroundTint="#3D96FF"
@@ -117,7 +117,7 @@
                     android:id="@+id/Decomisos_agregar_btnSubirFoto"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginHorizontal="5dp"
                     android:layout_weight="1"
                     android:background="@drawable/rounded_corners_all"
                     android:backgroundTint="#3D96FF"
@@ -142,42 +142,28 @@
                         android:text="Subir foto"
                         android:textColor="#FFFFFF"
                         android:textSize="16sp" />
+
                 </LinearLayout>
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/Decomisos_agregar_btnQuitarFoto"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginHorizontal="60dp"
-                android:layout_marginBottom="10dp"
-                android:background="@drawable/rounded_corners_all"
-                android:backgroundTint="#3D96FF"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/imageView20"
-                    android:layout_width="138dp"
-                    android:layout_height="34dp"
+                <LinearLayout
+                    android:id="@+id/Decomisos_agregar_btnQuitarFoto"
+                    android:layout_width="245dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="5dp"
                     android:layout_weight="1"
-                    android:paddingLeft="5dp"
-                    android:paddingTop="5dp"
-                    android:paddingRight="5dp"
-                    android:paddingBottom="5dp"
-                    android:rotation="45"
-                    app:srcCompat="@drawable/button_plus" />
+                    android:background="@drawable/rounded_corners_circular"
+                    android:backgroundTint="#E46363"
+                    android:gravity="center"
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/textView29"
-                    android:layout_width="207dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/poppins_semibold"
-                    android:text="Quitar foto"
-                    android:textColor="#FFFFFF"
-                    android:textSize="16sp" />
+                    <ImageView
+                        android:id="@+id/imageView26"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        app:srcCompat="@drawable/button_minnus" />
+                </LinearLayout>
+
             </LinearLayout>
 
             <LinearLayout
