--- a/app/src/main/res/layout/activity_decomisos_main.xml
+++ b/app/src/main/res/layout/activity_decomisos_main.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#EDF2F6"
+    android:orientation="vertical"
     tools:context=".Decomisos_main">
 
     <LinearLayout
-        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -21,14 +21,13 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/infractores_main_btnQuit"
+                android:id="@+id/Decomisos_main_btnQuit"
                 android:layout_width="0dp"
                 android:layout_height="59dp"
                 android:layout_weight="1"
                 android:src="@drawable/buttton_back" />
 
             <TextView
-                android:id="@+id/textView3"
                 android:layout_width="242dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -41,7 +40,6 @@
         </LinearLayout>
 
         <ImageView
-            android:id="@+id/imageView16"
             android:layout_width="match_parent"
             android:layout_height="4dp"
             android:src="@drawable/decorative_line" />
@@ -49,80 +47,80 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout6"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/linearLayout3"
+        android:layout_width="350dp"
+        android:layout_height="41dp"
         android:layout_marginTop="10dp"
+        android:background="@drawable/rounded_corners_right"
         android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
-        <LinearLayout
-            android:id="@+id/linearLayout3"
-            android:layout_width="350dp"
-            android:layout_height="41dp"
-            android:background="@drawable/rounded_corners_right"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/editTextTextPersonName"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="20dp"
-                android:layout_weight="1"
-                android:background="@color/white"
-                android:ems="10"
-                android:fontFamily="@font/poppins"
-                android:hint="Busqueda"
-                android:inputType="textPersonName"
-                android:textSize="16sp" />
-
-            <ImageView
-                android:id="@+id/imageView15"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:padding="7dp"
-                android:src="@drawable/button_search" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <EditText
+            android:id="@+id/editTextTextPersonName"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="horizontal">
+            android:layout_marginLeft="20dp"
+            android:layout_weight="1"
+            android:background="@android:color/transparent"
+            android:ems="10"
+            android:fontFamily="@font/poppins"
+            android:hint="Busqueda"
+            android:inputType="textPersonName"
+            android:textSize="16sp" />
 
-            <LinearLayout
-                android:layout_width="42dp"
-                android:layout_height="42dp"
-                android:background="@drawable/rounded_corners_circular"
-                android:backgroundTint="#3D96FF"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/imageView14"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="10dp"
-                    app:srcCompat="@drawable/button_plus" />
-            </LinearLayout>
-        </LinearLayout>
     </LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="726dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
-        app:layout_constraintVertical_bias="0.324">
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
+        android:layout_weight="1">
 
         <LinearLayout
+            android:id="@+id/Decomisos_main_LlDecomisos"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:orientation="vertical" />
     </ScrollView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <LinearLayout
+        android:id="@+id/Decomisos_main_btnAgregar"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/rounded_corners_all"
+        android:backgroundTint="#4399FF"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imageView18"
+            android:layout_width="0dp"
+            android:layout_height="34dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="1"
+            android:paddingLeft="7dp"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:src="@drawable/button_plus" />
+
+        <TextView
+            android:id="@+id/textView21"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:fontFamily="@font/poppins_semibold"
+            android:gravity="center_vertical"
+            android:text="Agregar"
+            android:textColor="#FFFFFF"
+            android:textSize="16sp" />
+    </LinearLayout>
+</LinearLayout>
