--- a/app/src/main/res/layout/activity_infractores_main.xml
+++ b/app/src/main/res/layout/activity_infractores_main.xml
@@ -65,20 +65,13 @@
         android:layout_height="match_parent"
         android:layout_marginLeft="20dp"
         android:layout_weight="1"
-        android:background="@color/white"
+        android:background="@android:color/transparent"
         android:ems="10"
         android:fontFamily="@font/poppins"
         android:hint="Busqueda"
         android:inputType="textPersonName"
         android:textSize="16sp" />
 
-    <ImageView
-        android:id="@+id/imageView15"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:padding="7dp"
-        android:src="@drawable/button_search" />
   </LinearLayout>
 
   <TextView
