--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,20 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EDF2F6"
+    android:background="@drawable/splash_screen_gradient"
     tools:context=".SplashScreen">
 
     <ImageView
         android:id="@+id/idLogoSplashScreen"
-        android:layout_width="227dp"
-        android:layout_height="259dp"
+        android:layout_width="171dp"
+        android:layout_height="202dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.323"
-        app:srcCompat="@drawable/splash_screen_logo" />
+        app:layout_constraintVertical_bias="0.396"
+        app:srcCompat="@drawable/logo0" />
 
     <TextView
         android:id="@+id/textView2"
@@ -25,6 +24,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_bold"
         android:text="ESESPI"
+        android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
