Crud decomisos 100%, statusbar translucent, manifext fixed

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EDF2F6"
+    android:background="@color/background"
     tools:context=".MainActivity">
 
 
@@ -12,14 +12,14 @@
         android:id="@+id/btnIniciarSesiónLogIn"
         android:layout_width="334dp"
         android:layout_height="55dp"
-        android:backgroundTint="#4399FF"
         android:background="@drawable/rounded_corners_all"
+        android:backgroundTint="@color/colorPrimary"
         android:elevation="20dp"
         android:fontFamily="@font/poppins_semibold"
         android:padding="10dp"
         android:text="Iniciar Sesión"
         android:textAllCaps="false"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/PrimaryColorButtonText"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,14 +32,14 @@
         android:id="@+id/btnIniciarSesionRegistrarse"
         android:layout_width="334dp"
         android:layout_height="55dp"
-        android:backgroundTint="#D9EAFF"
         android:background="@drawable/rounded_corners_all"
+        android:backgroundTint="@color/colorAccent"
         android:elevation="20dp"
-        android:padding="10dp"
         android:fontFamily="@font/poppins_semibold"
+        android:padding="10dp"
         android:text="Registrarse"
         android:textAllCaps="false"
-        android:textColor="#4399FF"
+        android:textColor="@color/colorPrimary"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,6 +54,7 @@
         android:layout_height="51dp"
         android:layout_gravity="center"
         android:background="@drawable/rounded_corners_all"
+        android:backgroundTint="@color/EditTextBackground"
         android:elevation="20dp"
         android:ems="10"
         android:fontFamily="@font/poppins_semibold"
@@ -61,8 +62,8 @@
         android:inputType="textPassword"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:textColor="#000000"
-        android:textColorHint="#8C8C8C"
+        android:textColor="@color/TextColor"
+        android:textColorHint="@color/HintColor"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,7 +79,7 @@
         android:fontFamily="@font/poppins_extrabold"
         android:text="¡Bienvenido!"
         android:textAlignment="center"
-        android:textColor="#403F71"
+        android:textColor="@color/register_loginUpSideText"
         android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -105,6 +106,7 @@
         android:layout_width="332dp"
         android:layout_height="51dp"
         android:background="@drawable/rounded_corners_all"
+        android:backgroundTint="@color/EditTextBackground"
         android:elevation="20dp"
         android:ems="10"
         android:fontFamily="@font/poppins_semibold"
@@ -113,8 +115,8 @@
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:textColor="#000000"
-        android:textColorHint="#8C8C8C"
+        android:textColor="@color/TextColor"
+        android:textColorHint="@color/HintColor"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -129,7 +131,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_medium"
         android:text="¿Olvidaste tus credenciales?"
-        android:textColor="#615D5D"
+        android:textColor="@color/gray"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
