--- a/app/src/main/res/layout/acercamientos_card_acercamiento.xml
+++ b/app/src/main/res/layout/acercamientos_card_acercamiento.xml
@@ -9,7 +9,8 @@
         android:id="@+id/Acercamientos_Card_Acercamiento_btnInfo"
         android:layout_width="match_parent"
         android:layout_height="90dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -21,7 +22,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@drawable/rounded_corners_left"
-                android:backgroundTint="#3D96FF"
+                android:backgroundTint="@color/colorPrimary"
                 android:orientation="horizontal"></LinearLayout>
 
             <LinearLayout
@@ -29,7 +30,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@drawable/rounded_corners_right"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="@color/white"
                 android:orientation="vertical"
                 android:paddingHorizontal="20dp"
                 android:paddingVertical="10dp">
@@ -48,7 +49,7 @@
                         android:fontFamily="@font/poppins_semibold"
                         android:gravity="center_vertical"
                         android:text="TextView"
-                        android:textColor="#4399FF" />
+                        android:textColor="@color/colorPrimary" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -67,7 +68,8 @@
                         android:gravity="center_vertical"
                         android:text="TextView"
                         android:textAlignment="viewStart"
-                        android:textColor="#313131" />
+                        android:textColor="@color/gray"
+                        tools:ignore="RtlCompat" />
 
                 </LinearLayout>
 
