--- a/app/src/main/res/layout/activity_decomisos_info.xml
+++ b/app/src/main/res/layout/activity_decomisos_info.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:background="#EDF2F6"
-tools:context=".Decomisos_info">
+tools:context=".Decomisos_info"
+android:orientation="vertical">
 
 <LinearLayout
-    android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -28,7 +28,6 @@ tools:context=".Decomisos_info">
             android:src="@drawable/buttton_back" />
 
         <TextView
-            android:id="@+id/textView3"
             android:layout_width="242dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -41,124 +40,90 @@ tools:context=".Decomisos_info">
     </LinearLayout>
 
     <ImageView
-        android:id="@+id/imageView16"
         android:layout_width="match_parent"
         android:layout_height="4dp"
         android:src="@drawable/decorative_line" />
 
 </LinearLayout>
 
-<ScrollView
-    android:id="@+id/scrollView4"
-    android:layout_width="match_parent"
-    android:layout_height="600dp"
-    app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:id="@+id/imageView24"
-                android:layout_width="102dp"
-                android:layout_height="169dp"
-                android:rotationY="180"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/buttton_back_gray" />
-
-            <ImageView
-                android:id="@+id/imageView21"
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:srcCompat="@drawable/sample_image" />
-
-            <ImageView
-                android:id="@+id/imageView23"
-                android:layout_width="102dp"
-                android:layout_height="169dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/buttton_back_gray" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="0dp"
+        android:layout_marginBottom="10dp"
+        android:layout_weight="1">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
-
-            <TextView
-                android:id="@+id/textV768678iew34"
+            <ImageView
+                android:id="@+id/Decomisos_info_imgDecomiso"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/poppins_semibold"
-                android:text="Nombre:"
-                android:textColor="#4399FF" />
-
-            <TextView
-                android:id="@+id/Infractores_info_lblDireccion"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginBottom="20dp"
-                android:fontFamily="@font/poppins_medium"
-                android:text="La balacera"
-                android:textColor="#313131"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/textV768678iew2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/poppins_semibold"
-                android:text="Detalles:"
-                android:textColor="#4399FF" />
-
-            <TextView
-                android:id="@+id/infractores_info_lblDireccion2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginBottom="20dp"
-                android:fontFamily="@font/poppins_medium"
-                android:text="Balaciaron por ahi xd"
-                android:textColor="#313131"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/textV768678iew"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:fontFamily="@font/poppins_semibold"
-                android:text="Involucrados:"
-                android:textColor="#4399FF" />
+                android:layout_height="250dp"
+                app:srcCompat="@drawable/sample_image" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"></LinearLayout>
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="20dp"
+                android:orientation="vertical">
 
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:text="Tipo de detención:"
+                    android:textColor="#4399FF" />
+
+                <TextView
+                    android:id="@+id/Decomisos_info_lblTipoDetencion"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="20dp"
+                    android:fontFamily="@font/poppins_medium"
+                    android:textColor="#313131"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:text="Descripción:"
+                    android:textColor="#4399FF" />
+
+                <TextView
+                    android:id="@+id/Decomisos_info_lblDescripcion"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="20dp"
+                    android:fontFamily="@font/poppins_medium"
+                    android:textColor="#313131"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:text="Involucrados:"
+                    android:textColor="#4399FF" />
+
+                <LinearLayout
+                    android:id="@+id/Decomisos_info_llInvolucrados"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"></LinearLayout>
+
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
-</ScrollView>
+    </ScrollView>
 
 <LinearLayout
     android:layout_width="match_parent"
@@ -178,7 +143,7 @@ tools:context=".Decomisos_info">
         android:orientation="horizontal">
 
         <LinearLayout
-            android:id="@+id/Infractores_info_btnEliminar"
+            android:id="@+id/Decomisos_info_btnEliminar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginRight="5dp"
@@ -189,7 +154,6 @@ tools:context=".Decomisos_info">
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView30"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -201,7 +165,7 @@ tools:context=".Decomisos_info">
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/Infractores_info_btnEditar"
+            android:id="@+id/Decomisos_info_btnEditar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="5dp"
@@ -212,7 +176,6 @@ tools:context=".Decomisos_info">
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView32"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -225,7 +188,7 @@ tools:context=".Decomisos_info">
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/Infractores_info_btnRegresar"
+        android:id="@+id/Decomisos_info_btnRegresar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="5dp"
@@ -236,7 +199,6 @@ tools:context=".Decomisos_info">
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView33"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -248,4 +210,4 @@ tools:context=".Decomisos_info">
     </LinearLayout>
 
 </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
