--- a/app/src/main/res/layout/activity_registro_usuario_ingreso_credenciales.xml
+++ b/app/src/main/res/layout/activity_registro_usuario_ingreso_credenciales.xml
@@ -36,7 +36,7 @@
         app:layout_constraintVertical_bias="0.241" />
 
     <EditText
-        android:id="@+id/RegistroUsuarioIngresoCredencialestxtUsuario"
+        android:id="@+id/txtUsuario"
         android:layout_width="332dp"
         android:layout_height="51dp"
         android:background="@drawable/rounded_corners_all"
