Validaciones de registro completas

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,6 +60,7 @@
         android:fontFamily="@font/poppins_semibold"
         android:hint="Contraseña"
         android:inputType="textPassword"
+        android:maxLength="15"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:textColor="@color/TextColor"
