--- a/app/src/main/res/layout/activity_registro_usuario_ingreso_datos_referencia_personal.xml
+++ b/app/src/main/res/layout/activity_registro_usuario_ingreso_datos_referencia_personal.xml
@@ -121,6 +121,7 @@
                 android:fontFamily="@font/poppins_medium"
                 android:hint="Telefono"
                 android:inputType="number"
+                android:maxLength="8"
                 android:paddingBottom="7dp"
                 android:textColorHint="#8F8F8F"
                 android:textSize="19sp" />
